# sharky

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run  setup.cfg
apps/accounts/: admin.py  forms.py  mailer.py  models.py  urls.py  views.py
apps/accounts/api/: mutations.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20210514_0741.py  0003_emailuser_is_borrower.py  0004_emailuser_is_capital_source_provider.py  0005_emailuser_is_borrower_active.py
apps/accounts/tests/: factories.py  mixins.py  test_auth.py
apps/lending/: admin.py  apps.py  context_processors.py  models.py  urls.py  utils.py  views.py
apps/lending/migrations/: 0001_initial.py  0002_alter_loansourceamortization_pretermindated_interest_rate.py  0002_loan_first_payment_date.py  0003_auto_20210515_1430.py  0003_remove_loan_borrower_old.py  0004_alter_loansource_loan.py  0004_delete_borrower.py  0005_auto_20210517_0950.py  0005_capitalsource_from_third_party.py  0006_amortization_is_preterminated.py  0006_capitalsource_provider.py  0007_alter_borrower_unique_together.py  0007_remove_capitalsource_from_third_party.py  0008_alter_bank_name.py  0009_loan_borrower_old.py  (+5 more)
docs/authentication/: change_password.md  forgot_password.md  login.md  reset_password.md  signup.md  verify_account.md
server/: django_devserver.sh  uwsgi.ini
sharky/: middleware.py  mixins.py  schema.py  urls.py  views.py  wsgi.py
sharky/settings/: dev.py  production.py
sharky/templates/: base.html  index.html  login.html
(+10 files in other folders)
